add robots metatag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Stefan Nieke">
+        <meta name="robots" content="index, follow">
         <meta name="keywords" content="pdf,din 5008,niekes">
         <meta name="description" content="brief is a DIN 5008 pdf creator">
         <title>brief | a DIN 5008-B pdf creator</title>
