--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./static/img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="./static/img/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./static/img/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="manifest" href="./static/manifest.json">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="white">
+        <meta name="apple-mobile-web-app-title" content="brief | a DIN 5008-B pdf creator">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="msapplication-TileColor" content="#29B8E5">
+        <meta name="msapplication-TileImage" content="./static/img/ms-icon-144x144.png">
+        <meta name="theme-color" content="#29B8E5">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Stefan Nieke">
