take care of display issues on mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta name="msapplication-TileImage" content="./static/img/ms-icon-144x144.png">
         <meta name="theme-color" content="#29B8E5">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <meta name="author" content="Stefan Nieke">
         <meta name="robots" content="index, follow">
         <meta name="keywords" content="pdf,din 5008,niekes">
